--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Liu Liangzu"
-  avatar           : "证件照白.png"
+  avatar           : "证件照白.jpg"
   bio              : "I am Liu Liangzu, currently pursuing a master's degree at Peking University."
   location         : "Beijing"
   employer         :
